--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
   <header>
-    <h1>Wired &amp; Weird</h1>
+    <div class="header-container">
+      <h1>Wired &amp; Weird</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Article</a>
+        <a href="#">Contact</a>
+      </nav>
+    </div>
   </header>
   <main>
     <section id="featured-article">
